package com.bcopstein.ex3_sist_vendas_hexagonal.domain.model;

public enum StatusPedido {
    NOVO,
    RESERVADO,
    CONFIRMADO,
    CANCELADO
}
